[package]
name = "veinq-server"
version = "0.1.0"
edition = "2021"
description = "A lightweight message broker written in Rust"
license = "AGPL-3.0"
repository = "https://github.com/ligmitz/veinq"
readme = "../README.md"
keywords = ["rust", "messaging", "broker", "streaming"]
categories = ["network-programming", "asynchronous"]

[[bin]]
name = "veinq-server"
path = "src/main.rs"

[dependencies]
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "1"